# SWS-Compatible-Subclassing

./: .gitignore  CMakeLists.txt  README.md
SWS-Compatible-Subclassing/: CMakeLists.txt  SWS-Compatible-Subclassing.cpp  SWS-Compatible-Subclassing.h
